kustomize/staging/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nextcloud
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nextcloud
    spec:
      containers:
      - image: nextcloud
        name: nextcloud
        resources: {}
status: {}
